# IncidentOps

./: .gitignore  CLAUDE.md  Makefile  README.md  incidentops-brief.md  pyproject.toml  session-log.md  setup-mac.sh  vercel.json
.github/workflows/: ci.yml
incidentops/_planning/: build-plan.md
incidentops/agent/: diagnose.py  handoff.py  pipeline.py  remediate.py
incidentops/dashboard/: package-lock.json  package.json
incidentops/dashboard/app/: layout.tsx  page.tsx
incidentops/dashboard/data/: eval-results.json  tickets.json
incidentops/dashboard/lib/: data.ts
incidentops/data/: README.md  gold-set-spec.md  validate_corpus.py
incidentops/data/adversarial/: empty_evidence.jsonl  injections.jsonl  out_of_scope.jsonl
incidentops/data/gold/: TKT-2026-03-04-001.json  TKT-2026-03-05-002.json  TKT-2026-03-06-003.json  TKT-2026-03-07-004.json  TKT-2026-03-10-007.json  TKT-2026-03-11-008.json  TKT-2026-03-14-011.json  TKT-2026-03-14-012.json  TKT-2026-03-15-013.json  TKT-2026-03-16-015.json  TKT-2026-03-17-018.json  TKT-2026-03-18-020.json  TKT-2026-03-21-023.json  TKT-2026-03-24-027.json  TKT-2026-03-25-029.json  TKT-2026-03-27-032.json
incidentops/data/incidents/: INC001-2025-webhook-cascading-failure.md  INC002-2026-data-sync-lag-near-miss.md  INC003-2026-db-connection-pool-cascade.md  INC004-2026-cdn-config-cache-staleness.md  INC005-2026-certificate-pinning-mass-outage.md  (+3 more)
incidentops/evals/: README.md  config.json  graders.py  run_evals.py  schema.py
ops/: pr_comment.py
tests/: test_diagnose.py  test_graders.py  test_remediate.py
(+38 files in other folders)
