[project]
name = "incidentops"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "inspect-ai>=0.3.80",
    "lancedb>=0.20.0",
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["incidentops"]
